fixed uneven padding on contact footer widget

--- a/app/assets/stylesheets/widgets/single_column/contact_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/contact_footer.scss
@@ -1,10 +1,6 @@
 .contact-footer-widget {
-	padding: 8px 0 36px 0;
+	@include pad($base-spacing*2 0);
 	background-color: #E5E5E5;
-
-	@media(min-width: 780px) {
-		padding: 32px 0 36px 0;
-	}
 
 	.outer-container {
 		@include outer-container();
@@ -18,8 +14,12 @@
   		}
 
 		@media(min-width: 780px) {
-			@include pad(0 $base-spacing);
+			@include pad(0 $base-spacing*2);
 			border-spacing: 0;
+		}
+
+		@media(min-width: $large-screen) {
+			@include pad(0 $base-spacing);
 		}
 	}
 
